zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct wasi_io_0_2_0_error_borrow_error_t {
  int32_t __handle;
} wasi_io_0_2_0_error_borrow_error_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef struct wasi_io_0_2_0_streams_own_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_output_stream_t;
typedef struct {
  uint8_t *ptr;
  size_t len;
} http_trigger_list_u8_t;
// File size or length of a region within a file.
typedef uint64_t wasi_filesystem_0_2_0_types_filesize_t;
// The type of a filesystem object referenced by a descriptor.
// 
// Note: This was called `filetype` in earlier versions of WASI.
typedef uint8_t wasi_filesystem_0_2_0_types_descriptor_type_t;
// Descriptor flags.
// 
// Note: This was called `fdflags` in earlier versions of WASI.
typedef uint8_t wasi_filesystem_0_2_0_types_descriptor_flags_t;
// Number of hard links to an inode.
typedef uint64_t wasi_filesystem_0_2_0_types_link_count_t;
typedef struct {
  bool is_some;
  wasi_filesystem_0_2_0_types_datetime_t val;
} wasi_filesystem_0_2_0_types_option_datetime_t;
// File attributes.
// 
// Note: This was called `filestat` in earlier versions of WASI.
typedef struct wasi_filesystem_0_2_0_types_descriptor_stat_t {
  // File type.
  wasi_filesystem_0_2_0_types_descriptor_type_t   type;
  // Number of hard links to the file.
  wasi_filesystem_0_2_0_types_link_count_t   link_count;
  // For regular files, the file size in bytes. For symbolic links, the
  // length in bytes of the pathname contained in the symbolic link.
  wasi_filesystem_0_2_0_types_filesize_t   size;
  // Last data access timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain an access
  // timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   data_access_timestamp;
  // Last data modification timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain a
  // modification timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   data_modification_timestamp;
  // Last file status-change timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain a
  // status-change timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   status_change_timestamp;
} wasi_filesystem_0_2_0_types_descriptor_stat_t;
// A directory entry.
typedef struct wasi_filesystem_0_2_0_types_directory_entry_t {
  // The type of the file referred to by this directory entry.
  wasi_filesystem_0_2_0_types_descriptor_type_t   type;
  // The name of the object.
  http_trigger_string_t   name;
} wasi_filesystem_0_2_0_types_directory_entry_t;
// Error codes returned by functions, similar to `errno` in POSIX.
// Not all of these error codes are returned by the functions provided by this
// API; some are used in higher-level library layers, and others are provided
// merely for alignment with POSIX.
typedef uint8_t wasi_filesystem_0_2_0_types_error_code_t;
// A 128-bit hash value, split into parts because wasm doesn't have a
// 128-bit integer type.
typedef struct wasi_filesystem_0_2_0_types_metadata_hash_value_t {
  // 64 bits of a 128-bit hash value.
  uint64_t   lower;
  // Another 64 bits of a 128-bit hash value.
  uint64_t   upper;
} wasi_filesystem_0_2_0_types_metadata_hash_value_t;
typedef struct wasi_filesystem_0_2_0_types_own_descriptor_t {
  int32_t __handle;
} wasi_filesystem_0_2_0_types_own_descriptor_t;
typedef struct wasi_filesystem_0_2_0_types_borrow_descriptor_t {
  int32_t __handle;
} wasi_filesystem_0_2_0_types_borrow_descriptor_t;
typedef struct wasi_filesystem_0_2_0_types_own_directory_entry_stream_t {
  int32_t __handle;
} wasi_filesystem_0_2_0_types_own_directory_entry_stream_t;
typedef struct wasi_filesystem_0_2_0_types_borrow_directory_entry_stream_t {
  int32_t __handle;
} wasi_filesystem_0_2_0_types_borrow_directory_entry_stream_t;
typedef wasi_io_0_2_0_streams_own_input_stream_t wasi_filesystem_0_2_0_types_own_input_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_own_input_stream_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_own_input_stream_error_code_t;
typedef wasi_io_0_2_0_streams_own_output_stream_t wasi_filesystem_0_2_0_types_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_own_output_stream_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_own_output_stream_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_void_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_descriptor_flags_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_descriptor_flags_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_descriptor_type_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_descriptor_type_error_code_t;
typedef struct {
  http_trigger_list_u8_t f0;
  bool f1;
} http_trigger_tuple2_list_u8_bool_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_tuple2_list_u8_bool_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_tuple2_list_u8_bool_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_filesize_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_filesize_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_own_directory_entry_stream_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_own_directory_entry_stream_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_descriptor_stat_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_descriptor_stat_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_own_descriptor_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_own_descriptor_error_code_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_string_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_string_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_metadata_hash_value_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_metadata_hash_value_error_code_t;
typedef struct {
  bool is_some;
  wasi_filesystem_0_2_0_types_directory_entry_t val;
} wasi_filesystem_0_2_0_types_option_directory_entry_t;
typedef struct {
  bool is_err;
  union {
    wasi_filesystem_0_2_0_types_option_directory_entry_t ok;
    wasi_filesystem_0_2_0_types_error_code_t err;
  } val;
} wasi_filesystem_0_2_0_types_result_option_directory_entry_error_code_t;
typedef wasi_io_0_2_0_error_borrow_error_t wasi_filesystem_0_2_0_types_borrow_error_t;
typedef struct {
  bool is_some;
  wasi_filesystem_0_2_0_types_error_code_t val;
} wasi_filesystem_0_2_0_types_option_error_code_t;
typedef wasi_filesystem_0_2_0_types_own_descriptor_t wasi_filesystem_0_2_0_preopens_own_descriptor_t;
typedef struct {
  wasi_filesystem_0_2_0_preopens_own_descriptor_t f0;
  http_trigger_string_t f1;
} wasi_filesystem_0_2_0_preopens_tuple2_own_descriptor_string_t;
typedef struct {
  wasi_filesystem_0_2_0_preopens_tuple2_own_descriptor_string_t *ptr;
  size_t len;
} wasi_filesystem_0_2_0_preopens_list_tuple2_own_descriptor_string_t;
typedef struct wasi_sockets_0_2_0_network_own_network_t {
  int32_t __handle;
} wasi_sockets_0_2_0_network_own_network_t;
typedef struct wasi_sockets_0_2_0_network_borrow_network_t {
  int32_t __handle;
} wasi_sockets_0_2_0_network_borrow_network_t;
// Error codes.
// 
// In theory, every API can return any error code.
// In practice, API's typically only return the errors documented per API
// combined with a couple of errors that are always possible:
// - `unknown`
// - `access-denied`
// - `not-supported`
// - `out-of-memory`
// - `concurrency-conflict`
// 
// See each individual API for what the POSIX equivalents are. They sometimes differ per API.
typedef uint8_t wasi_sockets_0_2_0_network_error_code_t;
typedef uint8_t wasi_sockets_0_2_0_network_ip_address_family_t;
typedef struct wasi_sockets_0_2_0_network_ipv4_address_t {
  uint8_t   f0;
  uint8_t   f1;
  uint8_t   f2;
  uint8_t   f3;
} wasi_sockets_0_2_0_network_ipv4_address_t;
typedef struct wasi_sockets_0_2_0_network_ipv6_address_t {
  uint16_t   f0;
  uint16_t   f1;
  uint16_t   f2;
  uint16_t   f3;
  uint16_t   f4;
  uint16_t   f5;
  uint16_t   f6;
  uint16_t   f7;
} wasi_sockets_0_2_0_network_ipv6_address_t;
typedef struct wasi_sockets_0_2_0_network_ip_address_t {
  uint8_t tag;
  union {
    wasi_sockets_0_2_0_network_ipv4_address_t     ipv4;
    wasi_sockets_0_2_0_network_ipv6_address_t     ipv6;
  } val;
} wasi_sockets_0_2_0_network_ip_address_t;
typedef struct wasi_sockets_0_2_0_network_ipv4_socket_address_t {
  // sin_port
  uint16_t   port;
  // sin_addr
  wasi_sockets_0_2_0_network_ipv4_address_t   address;
} wasi_sockets_0_2_0_network_ipv4_socket_address_t;
typedef struct wasi_sockets_0_2_0_network_ipv6_socket_address_t {
  // sin6_port
  uint16_t   port;
  // sin6_flowinfo
  uint32_t   flow_info;
  // sin6_addr
  wasi_sockets_0_2_0_network_ipv6_address_t   address;
  // sin6_scope_id
  uint32_t   scope_id;
} wasi_sockets_0_2_0_network_ipv6_socket_address_t;
typedef struct wasi_sockets_0_2_0_network_ip_socket_address_t {
  uint8_t tag;
  union {
    wasi_sockets_0_2_0_network_ipv4_socket_address_t     ipv4;
    wasi_sockets_0_2_0_network_ipv6_socket_address_t     ipv6;
  } val;
} wasi_sockets_0_2_0_network_ip_socket_address_t;
typedef wasi_sockets_0_2_0_network_own_network_t wasi_sockets_0_2_0_instance_network_own_network_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_udp_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_socket_address_t wasi_sockets_0_2_0_udp_ip_socket_address_t;
typedef wasi_sockets_0_2_0_network_ip_address_family_t wasi_sockets_0_2_0_udp_ip_address_family_t;
// A received datagram.
typedef struct wasi_sockets_0_2_0_udp_incoming_datagram_t {
  // The payload.
  // 
  // Theoretical max size: ~64 KiB. In practice, typically less than 1500 bytes.
  http_trigger_list_u8_t   data;
  // The source address.
  // 
  // This field is guaranteed to match the remote address the stream was initialized with, if any.
  // 
  // Equivalent to the `src_addr` out parameter of `recvfrom`.
  wasi_sockets_0_2_0_udp_ip_socket_address_t   remote_address;
} wasi_sockets_0_2_0_udp_incoming_datagram_t;