zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

pub const struct_wasi_filesystem_0_2_0_types_metadata_hash_value_t = extern struct {
    lower: u64 = @import("std").mem.zeroes(u64),
    upper: u64 = @import("std").mem.zeroes(u64),
};
pub const wasi_filesystem_0_2_0_types_metadata_hash_value_t = struct_wasi_filesystem_0_2_0_types_metadata_hash_value_t;
pub const struct_wasi_filesystem_0_2_0_types_own_descriptor_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_filesystem_0_2_0_types_own_descriptor_t = struct_wasi_filesystem_0_2_0_types_own_descriptor_t;
pub const struct_wasi_filesystem_0_2_0_types_borrow_descriptor_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_filesystem_0_2_0_types_borrow_descriptor_t = struct_wasi_filesystem_0_2_0_types_borrow_descriptor_t;
pub const struct_wasi_filesystem_0_2_0_types_own_directory_entry_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_filesystem_0_2_0_types_own_directory_entry_stream_t = struct_wasi_filesystem_0_2_0_types_own_directory_entry_stream_t;
pub const struct_wasi_filesystem_0_2_0_types_borrow_directory_entry_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_filesystem_0_2_0_types_borrow_directory_entry_stream_t = struct_wasi_filesystem_0_2_0_types_borrow_directory_entry_stream_t;
pub const wasi_filesystem_0_2_0_types_own_input_stream_t = wasi_io_0_2_0_streams_own_input_stream_t;
const union_unnamed_59 = extern union {
    ok: wasi_filesystem_0_2_0_types_own_input_stream_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_own_input_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_59 = @import("std").mem.zeroes(union_unnamed_59),
};
pub const wasi_filesystem_0_2_0_types_own_output_stream_t = wasi_io_0_2_0_streams_own_output_stream_t;
const union_unnamed_60 = extern union {
    ok: wasi_filesystem_0_2_0_types_own_output_stream_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_own_output_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_60 = @import("std").mem.zeroes(union_unnamed_60),
};
const union_unnamed_61 = extern union {
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_void_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_61 = @import("std").mem.zeroes(union_unnamed_61),
};
const union_unnamed_62 = extern union {
    ok: wasi_filesystem_0_2_0_types_descriptor_flags_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_descriptor_flags_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_62 = @import("std").mem.zeroes(union_unnamed_62),
};
const union_unnamed_63 = extern union {
    ok: wasi_filesystem_0_2_0_types_descriptor_type_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_descriptor_type_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_63 = @import("std").mem.zeroes(union_unnamed_63),
};
pub const http_trigger_tuple2_list_u8_bool_t = extern struct {
    f0: http_trigger_list_u8_t = @import("std").mem.zeroes(http_trigger_list_u8_t),
    f1: bool = @import("std").mem.zeroes(bool),
};
const union_unnamed_64 = extern union {
    ok: http_trigger_tuple2_list_u8_bool_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_tuple2_list_u8_bool_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_64 = @import("std").mem.zeroes(union_unnamed_64),
};
const union_unnamed_65 = extern union {
    ok: wasi_filesystem_0_2_0_types_filesize_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_filesize_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_65 = @import("std").mem.zeroes(union_unnamed_65),
};
const union_unnamed_66 = extern union {
    ok: wasi_filesystem_0_2_0_types_own_directory_entry_stream_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_own_directory_entry_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_66 = @import("std").mem.zeroes(union_unnamed_66),
};
const union_unnamed_67 = extern union {
    ok: wasi_filesystem_0_2_0_types_descriptor_stat_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_descriptor_stat_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_67 = @import("std").mem.zeroes(union_unnamed_67),
};
const union_unnamed_68 = extern union {
    ok: wasi_filesystem_0_2_0_types_own_descriptor_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_own_descriptor_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_68 = @import("std").mem.zeroes(union_unnamed_68),
};
const union_unnamed_69 = extern union {
    ok: http_trigger_string_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_string_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_69 = @import("std").mem.zeroes(union_unnamed_69),
};
const union_unnamed_70 = extern union {
    ok: wasi_filesystem_0_2_0_types_metadata_hash_value_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_metadata_hash_value_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_70 = @import("std").mem.zeroes(union_unnamed_70),
};
pub const wasi_filesystem_0_2_0_types_option_directory_entry_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_filesystem_0_2_0_types_directory_entry_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_directory_entry_t),
};
const union_unnamed_71 = extern union {
    ok: wasi_filesystem_0_2_0_types_option_directory_entry_t,
    err: wasi_filesystem_0_2_0_types_error_code_t,
};
pub const wasi_filesystem_0_2_0_types_result_option_directory_entry_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_71 = @import("std").mem.zeroes(union_unnamed_71),
};
pub const wasi_filesystem_0_2_0_types_borrow_error_t = wasi_io_0_2_0_error_borrow_error_t;
pub const wasi_filesystem_0_2_0_types_option_error_code_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_filesystem_0_2_0_types_error_code_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_error_code_t),
};
pub const wasi_filesystem_0_2_0_preopens_own_descriptor_t = wasi_filesystem_0_2_0_types_own_descriptor_t;
pub const wasi_filesystem_0_2_0_preopens_tuple2_own_descriptor_string_t = extern struct {
    f0: wasi_filesystem_0_2_0_preopens_own_descriptor_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_preopens_own_descriptor_t),
    f1: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
};
pub const wasi_filesystem_0_2_0_preopens_list_tuple2_own_descriptor_string_t = extern struct {
    ptr: [*c]wasi_filesystem_0_2_0_preopens_tuple2_own_descriptor_string_t = @import("std").mem.zeroes([*c]wasi_filesystem_0_2_0_preopens_tuple2_own_descriptor_string_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const struct_wasi_sockets_0_2_0_network_own_network_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_network_own_network_t = struct_wasi_sockets_0_2_0_network_own_network_t;
pub const struct_wasi_sockets_0_2_0_network_borrow_network_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_network_borrow_network_t = struct_wasi_sockets_0_2_0_network_borrow_network_t;
pub const wasi_sockets_0_2_0_network_error_code_t = u8;
pub const wasi_sockets_0_2_0_network_ip_address_family_t = u8;
pub const struct_wasi_sockets_0_2_0_network_ipv4_address_t = extern struct {
    f0: u8 = @import("std").mem.zeroes(u8),
    f1: u8 = @import("std").mem.zeroes(u8),
    f2: u8 = @import("std").mem.zeroes(u8),
    f3: u8 = @import("std").mem.zeroes(u8),
};
pub const wasi_sockets_0_2_0_network_ipv4_address_t = struct_wasi_sockets_0_2_0_network_ipv4_address_t;
pub const struct_wasi_sockets_0_2_0_network_ipv6_address_t = extern struct {
    f0: u16 = @import("std").mem.zeroes(u16),
    f1: u16 = @import("std").mem.zeroes(u16),
    f2: u16 = @import("std").mem.zeroes(u16),
    f3: u16 = @import("std").mem.zeroes(u16),
    f4: u16 = @import("std").mem.zeroes(u16),
    f5: u16 = @import("std").mem.zeroes(u16),
    f6: u16 = @import("std").mem.zeroes(u16),
    f7: u16 = @import("std").mem.zeroes(u16),
};
pub const wasi_sockets_0_2_0_network_ipv6_address_t = struct_wasi_sockets_0_2_0_network_ipv6_address_t;
const union_unnamed_72 = extern union {
    ipv4: wasi_sockets_0_2_0_network_ipv4_address_t,
    ipv6: wasi_sockets_0_2_0_network_ipv6_address_t,
};
pub const struct_wasi_sockets_0_2_0_network_ip_address_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_72 = @import("std").mem.zeroes(union_unnamed_72),
};
pub const wasi_sockets_0_2_0_network_ip_address_t = struct_wasi_sockets_0_2_0_network_ip_address_t;
pub const struct_wasi_sockets_0_2_0_network_ipv4_socket_address_t = extern struct {
    port: u16 = @import("std").mem.zeroes(u16),
    address: wasi_sockets_0_2_0_network_ipv4_address_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_network_ipv4_address_t),
};
pub const wasi_sockets_0_2_0_network_ipv4_socket_address_t = struct_wasi_sockets_0_2_0_network_ipv4_socket_address_t;
pub const struct_wasi_sockets_0_2_0_network_ipv6_socket_address_t = extern struct {
    port: u16 = @import("std").mem.zeroes(u16),
    flow_info: u32 = @import("std").mem.zeroes(u32),
    address: wasi_sockets_0_2_0_network_ipv6_address_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_network_ipv6_address_t),
    scope_id: u32 = @import("std").mem.zeroes(u32),
};
pub const wasi_sockets_0_2_0_network_ipv6_socket_address_t = struct_wasi_sockets_0_2_0_network_ipv6_socket_address_t;
const union_unnamed_73 = extern union {
    ipv4: wasi_sockets_0_2_0_network_ipv4_socket_address_t,
    ipv6: wasi_sockets_0_2_0_network_ipv6_socket_address_t,
};
pub const struct_wasi_sockets_0_2_0_network_ip_socket_address_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_73 = @import("std").mem.zeroes(union_unnamed_73),
};
pub const wasi_sockets_0_2_0_network_ip_socket_address_t = struct_wasi_sockets_0_2_0_network_ip_socket_address_t;
pub const wasi_sockets_0_2_0_instance_network_own_network_t = wasi_sockets_0_2_0_network_own_network_t;
pub const wasi_sockets_0_2_0_udp_error_code_t = wasi_sockets_0_2_0_network_error_code_t;
pub const wasi_sockets_0_2_0_udp_ip_socket_address_t = wasi_sockets_0_2_0_network_ip_socket_address_t;
pub const wasi_sockets_0_2_0_udp_ip_address_family_t = wasi_sockets_0_2_0_network_ip_address_family_t;
pub const struct_wasi_sockets_0_2_0_udp_incoming_datagram_t = extern struct {
    data: http_trigger_list_u8_t = @import("std").mem.zeroes(http_trigger_list_u8_t),
    remote_address: wasi_sockets_0_2_0_udp_ip_socket_address_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_udp_ip_socket_address_t),
};
pub const wasi_sockets_0_2_0_udp_incoming_datagram_t = struct_wasi_sockets_0_2_0_udp_incoming_datagram_t;
